err/za-parliament-scrapers.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/cobble'...
Listing './lib/python3.5/site-packages/cobble-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/mammoth'...
Listing './lib/python3.5/site-packages/mammoth/docx'...
Listing './lib/python3.5/site-packages/mammoth/html'...
Listing './lib/python3.5/site-packages/mammoth/style_reader'...
Listing './lib/python3.5/site-packages/mammoth/styles'...
Listing './lib/python3.5/site-packages/mammoth/styles/parser'...
Listing './lib/python3.5/site-packages/mammoth/writers'...
Listing './lib/python3.5/site-packages/mammoth-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/za_parliament_scrapers'...
Compiling './lib/python3.5/site-packages/za_parliament_scrapers/questions.py'...
***   File "./lib/python3.5/site-packages/za_parliament_scrapers/questions.py", line 43
    ur"""
          (?P<intro>
            (?:(?P<number1>\d+)\.?\s+)?         # Question number
            (?P<askedby>[-\w\s]+?)              # Name of question asker
            \s*\((?P<party>[-\w\s]+)\)?
            \s+to\s+ask\s+the\s+
            (?P<questionto>[-\w\s(),:.]+)[:.]
            [-\u2013\w\s(),\[\]/]*?
          )                                     # Intro
          (?P<translated>\u2020)?\s*(</b>|\n)\s*
          (?P<question>.*?)\s*                  # The question itself.
          (?:(?P<identifier>(?P<house>[NC])(?P<answer_type>[WO])(?P<id_number>\d+)E)|\n|$) # Number 2
        """,
         
                    
                                                                 
                                                                        
                                       
                                
                                             
                                   
                                                       
                                                
                                                                      
                                                                                                     
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/za_parliament_scrapers-0.1.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
